fixed spacing and commented out border lines

--- a/src/components/NoteItem/NoteItem.module.scss
+++ b/src/components/NoteItem/NoteItem.module.scss
@@ -6,9 +6,15 @@
     --circle-size: 20px;
     --line-width: 2px;
     --spacing: 10px;
-    --line-height: calc(100% + 10px);
+    --line-height: calc(100% + 25px);
+    // border-right: 1px solid var(--color-border);
 
     font-size: 19px;
+
+    padding-left: var(--spacing-3);
+    padding-right: var(--spacing-3);
+    padding-top: var(--spacing-6);
+    padding-bottom: var(--spacing-6);
 }
 
 .legend {
