--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,9 +1,9 @@
 .sidebar {
-  min-width: 200px;
+  min-width: 150px;
   display: flex;
   flex-direction: column;
   background-color: var(--color-background-primary);
-  border-right: 1px solid var(--color-border);
+  // border-right: 1px solid var(--color-border);
   height: 100%;
 }
 
