--- a/src/pages/NotesFeed/NotesFeed.module.scss
+++ b/src/pages/NotesFeed/NotesFeed.module.scss
@@ -9,12 +9,11 @@ body {
     display: flex;
     flex-direction: column;
     background-color: var(--color-background-primary);
-    padding: var(--spacing-4) var(--spacing-3) 0;
     height: 100%;
     overflow-y: auto;
 }
 
-.note-divider {
+.noteDivider {
     border-bottom: 1px solid var(--color-border);
 }
 
